# console

./: .gitignore  Cargo.toml  README.md
assets/: build.rs
src/: file.rs  folder.rs  main.rs  remove.rs  settings.rs  software.rs  utils.rs  view.rs
