[package]
name = "console"
version = "0.1.0"
authors = ["Brayden Carlson <braycarlson@hotmail.com>"]
edition = "2018"
build = "assets/build.rs"

[build-dependencies]
winres = "0.1.11"

[dependencies]
console = "0.7.7"
crossterm_cursor = "0.2.4"
dialoguer = "0.4.0"
fuzzy-matcher = "0.2.1"
indexmap = "1.0.2"
lazy_static = "1.3.0"
systemstat = "0.1.4"
walkdir = "2.2.8"
